--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI Keuangan — Chatbot</title>
+  <title>AI Trendix | membantu anda dalam mengelola keuangan anda untuk membantu memberikan saran yang baik untuk pengelolaan uang anda</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body data-theme="amoled">
   <div class="app">
     <header class="header">
-      <div class="brand"><h1>AI Keuangan — Asisten Pribadi</h1></div>
+      <div class="brand"><h1>AI Trendix</h1></div>
       <div class="actions">
         <button id="settingsBtn" class="btn">⚙️</button>
       </div>
