--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="brand"><h1>AI Trendix</h1></div>
       <div class="actions">
-        <button id="settingsBtn" class="btn">⋮
+        <button id="settingsBtn" class="btn"><img class="i" src="Settings.png>
 </button>
       </div>
     </header>
